# git-prism

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  dist-workspace.toml  lefthook.yml
.cargo/: mutants.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/mutate/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  integrity.yml  mutants.yml  release.yml
bdd/: README.md  environment.py  requirements.txt
bdd/features/: blast_radius.feature  c_analyzer.feature  cli_errors.feature  cli_languages.feature  cli_manifest.feature  cli_snapshot.feature  cli_version.feature  content_aware_diffs.feature  crates_io_install.feature  function_context.feature  import_scoped_callers.feature  java_analyzer.feature  pagination.feature  per_commit_history.feature  readme.feature  redirect_hook.feature  response_size_guardrails.feature  telemetry.feature  working_tree_status.feature  wrapper_extraction.feature
bdd/fixtures/hook_inputs/: heredoc_dash_with_git_inside.txt  heredoc_quoted_with_git_inside.txt  heredoc_then_git_diff.txt  heredoc_with_git_inside.txt
bdd/steps/: blast_radius_steps.py  cli_steps.py  content_aware_steps.py  crates_io_steps.py  file_steps.py  function_context_steps.py  import_scoping_steps.py  json_steps.py  large_pr_fixture_steps.py  manifest_assertion_steps.py  pagination_steps.py  redirect_hook_steps.py  repo_setup_steps.py  size_assertion_steps.py  telemetry_steps.py  wrapper_extraction_steps.py
demo/: demo.sh  narration.md  redirect-demo.sh  redirect-narration.md
demo/recordings/v0.7.0/: .gitkeep  redirect-epic.cast  redirect-epic_timing.json
demo/v0.2.0/: demo.sh  narration.md
demo/v0.2.0/recordings/: git-prism-v0.2.0.cast
docs/: epic-content-aware-diffs.md  handoff-function-context-epic.md  pytest-structured-failures-prompt.md  telemetry.md
docs/decisions/: 0001-working-tree-diff-approach.md  0002-mutation-testing-baseline.md  0003-pagination-spike.md  0004-content-aware-function-diff-spike.md  0005-function-context-spike.md  0006-import-resolution-spike.md  0007-pr-125-squash-merge-post-mortem.md  0008-redirect-hook-architecture.md  0008-redirect-hook-spike.md
docs/specs/: 2026-04-05-metrics-and-traces-design.md  2026-04-08-smarter-function-diffs.md  2026-04-09-agent-data-quality.md
hooks/: bash_redirect_hook.py  git-prism-redirect.sh  test_bash_redirect_hook.py
hooks/tests/: conftest.py  test_bash_redirect_hook.py
recordings/: git-prism-v0.2.0_timing.json
scripts/: build-demo.py  test_build_demo.py  validate-pr-refs.sh
src/: hooks.rs  main.rs  metrics.rs  pagination.rs  privacy.rs  server.rs  telemetry.rs
src/git/: depfiles.rs  diff.rs  generated.rs  mod.rs  reader.rs  worktree.rs
src/snapshots/: git_prism__server__tests__get_change_manifest_description.snap  git_prism__server__tests__get_commit_history_description.snap  git_prism__server__tests__get_file_snapshots_description.snap  git_prism__server__tests__get_function_context_description.snap  git_prism__server__tests__review_change_description.snap
src/tools/: context.rs  history.rs  import_scope.rs  manifest.rs  mod.rs  review_change.rs  size.rs  snapshots.rs  types.rs
src/treesitter/: c_lang.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
tests/: spike_body_hash.rs
tests/acceptance/: helpers.sh  run_all.sh  test_cli_errors.sh  test_cli_languages.sh  test_cli_manifest.sh  test_cli_snapshot.sh  test_cli_version.sh  test_readme.sh
