[package]
name = "git-prism"
version = "0.2.0"
edition = "2024"
description = "Agent-optimized git data MCP server — structured change manifests and full file snapshots for LLM agents"
license = "Apache-2.0"
repository = "https://github.com/mikelane/git-prism"
homepage = "https://github.com/mikelane/git-prism"
readme = "README.md"
keywords = ["mcp", "git", "llm", "agent", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "bdd/",
    "demo/",
    "docs/",
    ".claude/",
    ".github/",
    ".worktrees/",
    "lefthook.yml",
    "dist-workspace.toml",
    "CLAUDE.md",
]

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
gix = { version = "0.81", default-features = false, features = ["basic", "blob-diff", "sha1", "status"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
